--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.6.2
+APScheduler==3.6.3
 astroid==2.2.5
 async-timeout==3.0.1
 attrs==20.1.0
@@ -21,6 +22,7 @@ requests==2.22.0
 six==1.12.0
 typed-ast==1.4.0
 typing-extensions==3.7.4.3
+tzlocal==2.1
 urllib3==1.25.6
 virtualenv==16.7.2
 wrapt==1.11.2
